<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <!-- unos naziva filma -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_name"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/input_movie_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14dp" />

    </LinearLayout>


    <!-- unos zanra filma -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_genre"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/input_movie_genre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14dp" />

    </LinearLayout>


    <!-- unos godine filma -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_year"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/input_movie_year"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textSize="14dp" />

    </LinearLayout>


    <!-- Ok i Cancel button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ok"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textSize="14dp" />

    </LinearLayout>


</LinearLayout>