<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- AppBarLayot -->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Standard toolbar-->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_second"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:title="@string/activity_second_toolbar_title"
            app:layout_scrollFlags="scroll|enterAlways" >
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <!-- name -->
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:layout_below="@id/appbar"
        android:layout_marginTop="12sp"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />


    <!-- birthday -->
    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:textSize="11sp"
        android:textStyle="italic" />


    <!-- label biography -->
    <TextView
        android:id="@+id/label_biography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthday"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12sp"
        android:textColor="#000000"
        android:text="@string/label_biography"
        android:textSize="12sp" />

    <!-- biography -->
    <TextView
        android:id="@+id/biography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_biography"
        android:layout_centerHorizontal="true"
        android:textSize="10sp" />


    <!-- label rating -->
    <TextView
        android:id="@+id/label_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/biography"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12sp"
        android:text="@string/label_rating"
        android:textColor="#000000"
        android:textSize="12sp" />


    <!-- rating  -->
    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_rating"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textStyle="italic" />


    <!-- Rating Bar -->
    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rating"
        android:layout_centerHorizontal="true"
        android:numStars="5"
        android:progressBackgroundTint="#44444444"
        android:progressTint="#ffd700"
        android:scaleX=".6"
        android:scaleY=".6"
        android:secondaryProgressTint="#000000" />


    <!--  label movie -->
    <TextView
        android:id="@+id/label_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rating_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14sp"
        android:textColor="#000000"
        android:text="@string/label_movie"
        android:textSize="12sp" />


    <!-- movie -->
    <ListView
        android:id="@+id/list_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:layout_below="@id/label_movie" />


</RelativeLayout>
